Authentication-api - Cria endpoint para retorno das informações do usuário
