# src/Authentication-Api/Authentication.Application/Users/Queries/Dto/UserInformationDto.cs
@@ -1,0 +1,5 @@
+﻿using System;
+
+namespace Authentication.Application.Users.Queries.Dto;
+
+public record UserInformationDto(string Id, string Cpf);
